[package]
name = "turingarena-iospec"
version = "0.1.0"
authors = ["Massimo Cairo <cairomassimo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = {version = "1.0.38", features = ["extra-traits", "full"]}
proc-macro2 = {version = "1.0.19", features = ["span-locations"]}
annotate-snippets = {version = "0.9.0", features = ["color"]}
codemap = "0.1.3"
structopt = "0.3.16"
genco = "0.15.0"
num-traits = "0.2.12"
by_address = "1.0.4"
