[package]
name = "turingarena-iospec"
version = "0.1.0"
authors = ["Massimo Cairo <cairomassimo@gmail.com>"]
edition = "2018"
license = "MIT"
keywords = ["turingarena", "iospec"]
categories = ["command-line-utilities"]
description = "Tool to specify I/O format and automate validation, parser generation, and more. Part of TuringArena: tools to create programming challenges."
readme = "README.md"
repository = "https://github.com/turingarena/iospec/"

[dependencies]
syn = "1.0.39"
proc-macro2 = { version = "1.0.19", features = ["span-locations"] }
annotate-snippets = { version = "0.9.0", features = ["color"] }
codemap = "0.1.3"
structopt = "0.3.17"
genco = "0.15.0"
num-traits = "0.2.12"
by_address = "1.0.4"
